# modelwarehouse

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
src/modelwarehouse/: __init__.py  controller.py  database.py  structures.py  utils.py
src/modelwarehouse/structures/: __init__.py  core.py
src/modelwarehouse/utils/: __init__.py  core.py  logging.py
tests/: __init__.py  bad_config_b.tmpl  test_base_models.py  test_connect.py  test_controller.py  test_core_utils.py  test_logging.py  util.py  valid_config.tmpl
tests/resources/: bad_config_a.tmpl  meta_test.yml
