[project]
name = "modelwarehouse"
description = "Object database for storage/retrieval of persistent ML models."
authors = [{ name = "Evan Sprenger", email = "evan.sprenger@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
dynamic = ["version"]
keywords = ["ml", "object database", "persistent", "model storage", "scientific", "data"]

# Use .python-version
# requires-python = ">=3.12"

dependencies = [
    "btrees>=5.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "persistent>=5.0",
    "relstorage>=4.2.0",
    "transaction>=5.0",
    "zconfig>=4.3",
    "zodb>=6.1",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
    "black>=25.12.0",
    "debugpy>=1.8.19",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.1",
    "nodejs>=0.1.1",
    "poetry>=2.2.1",
    "pylint>=4.0.4",
    "pytest>=9.0.2",
    "python-lsp-server>=1.14.0",
]

[project.urls]
repository = "https://github.com/ESprenger/modelwarehouse"
homepage = "https://github.com/ESprenger/modelwarehouse"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [".","src"]

[tool.setuptools.dynamic]
version = {attr = "modelwarehouse.__version__"}
